--- a/APP_EX/app/src/main/res/layout/activity_rst_detail.xml
+++ b/APP_EX/app/src/main/res/layout/activity_rst_detail.xml
@@ -122,6 +122,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:text="@string/n"
                     tools:text="@string/n" />
 
@@ -130,7 +131,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="end"
+                    android:gravity="center"
                     android:text="@string/telKey"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     tools:text="@string/telKey" />
@@ -140,6 +141,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="start"
                     android:text="@string/n" />
             </LinearLayout>
 
