--- a/APP_EX/app/src/main/res/layout-v26/activity_rvw_post.xml
+++ b/APP_EX/app/src/main/res/layout-v26/activity_rvw_post.xml
@@ -104,8 +104,8 @@
 
                 <ImageView
                     android:id="@+id/phot_preview"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="80dp"
                     android:contentDescription="TODO"
