--- a/APP_EX/app/src/main/res/layout/activity_rst_detail.xml
+++ b/APP_EX/app/src/main/res/layout/activity_rst_detail.xml
@@ -89,11 +89,11 @@
                     android:layout_weight="1" />
 
                 <android.support.v7.widget.AppCompatImageView
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
                     android:id="@+id/imageView"
+                    android:layout_width="350dp"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"/>
+                    android:layout_centerHorizontal="true" />
 
                 <Space
                     android:layout_width="wrap_content"
@@ -105,6 +105,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <TextView
