--- a/APP_EX/app/src/main/res/layout/activity_rst_detail.xml
+++ b/APP_EX/app/src/main/res/layout/activity_rst_detail.xml
@@ -21,54 +21,6 @@
         android:text="@string/rst_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
-    <LinearLayout
-        android:id="@+id/wnt_go_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/wannaGoKey"
-            android:layout_width="99dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:text="@string/wannaGoKey"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
-
-        <TextView
-            android:id="@+id/wannago"
-            android:layout_width="69dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingTop="10dp"
-            android:text="@string/wanna_go_val" />
-
-        <!--<TextView-->
-            <!--android:id="@+id/rvw_create_button"-->
-            <!--android:layout_width="68dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:text="@string/rvw_create_button" />-->
-
-        <Button
-            android:id="@+id/rvw_create_button"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_weight="0"
-            android:text="@string/rvw_create_button" />
-
-        <TextView
-            android:id="@+id/vacancy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-    </LinearLayout>
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -320,6 +272,13 @@
                         android:gravity="start"
                         android:paddingStart="10dp"
                         android:text="@string/n" />
+
+                    <Button
+                        android:id="@+id/toRvwListBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/toCreateRvw" />
                 </LinearLayout>
 
                 <LinearLayout
