--- a/APP_EX/app/src/main/res/layout/activity_rvw_list.xml
+++ b/APP_EX/app/src/main/res/layout/activity_rvw_list.xml
@@ -180,11 +180,26 @@
 
     </TableLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvw_card_recycler"
+    <Button
+        android:id="@+id/rvw_create_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_weight="0"
+        android:text="@string/rvw_create_button" />
+
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:scrollbars="vertical" />
+        android:id="@+id/swipe_layout">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvw_card_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:scrollbars="vertical" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
