--- a/APP_EX/app/src/main/res/layout/activity_rst_detail.xml
+++ b/APP_EX/app/src/main/res/layout/activity_rst_detail.xml
@@ -79,23 +79,33 @@
                     android:text="@string/n"
                     tools:text="@string/n" />
 
-                <TextView
-                    android:id="@+id/telKey"
+                <LinearLayout
+                    android:id="@+id/tel"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/telKey"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    tools:text="@string/telKey" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/telVal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:text="@string/n" />
+                    <TextView
+                        android:id="@+id/telKey"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/telKey"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                        tools:text="@string/telKey" />
+
+                    <TextView
+                        android:id="@+id/telVal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="start"
+                        android:text="@string/n" />
+
+                </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
@@ -506,7 +516,7 @@
                     android:id="@+id/loc_dtl_key"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_margin="0dp"
                     android:gravity="center"
                     android:text="@string/addr"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body2"
@@ -516,6 +526,8 @@
                     android:id="@+id/loc_dtl"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:gravity="center"
                     android:text="@string/loc_dtl" />
                 <!--
         <com.google.android.gms.maps.MapView
