--- a/APP_EX/app/src/main/res/layout/menu_card.xml
+++ b/APP_EX/app/src/main/res/layout/menu_card.xml
@@ -17,19 +17,20 @@
 
         <TextView
             android:id="@+id/menu"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:foregroundGravity="center"
+            android:gravity="start"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/price"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:foregroundGravity="center"
+            android:gravity="end"
             android:textSize="18sp"
             android:textStyle="bold" />
 
