--- a/APP_EX/app/src/main/res/layout/menu_list_row.xml
+++ b/APP_EX/app/src/main/res/layout/menu_list_row.xml
@@ -5,34 +5,31 @@
     android:layout_margin="5dp"
     android:foregroundGravity="center"
     android:padding="5dp"
-    card_view:cardCornerRadius="5dp">
+    card_view:cardCornerRadius="5dp"
+    card_view:cardPreventCornerOverlap="false">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="5dp"
+        android:layout_height="wrap_content"
         android:foregroundGravity="center"
-        android:orientation="horizontal"
-        android:padding="5dp">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/menu"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:gravity="start"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textAppearance="@style/TextAppearance.AppCompat" />
 
         <TextView
             android:id="@+id/price"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:foregroundGravity="center"
             android:gravity="end"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textAppearance="@style/TextAppearance.AppCompat" />
 
 
     </LinearLayout>
